--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <title>Broadway</title>
   </head>
   <body>
 
