--- a/index.html
+++ b/index.html
@@ -7,5 +7,52 @@
   </head>
   <body>
 
-  </body>
+  <!-- Header Section -->
+
+  <div class="Header">
+    <h1 id="home">Broadway Design</h1>
+    <p>
+      <a href="#home">Home</a><br><br>
+      <a href="#process">Process</a><br><br>
+      <a href="#work">Work</a><br><br>
+      <a href="#team">Team</a><br><br>
+      <a href="#contact">Contact</a>
+    </p>
+    </div>
+
+    <!-- Process Section -->
+
+      <h2 id="process">Our Process</h2>
+      <img src="./resources/images/identify.svg" alt="curly arrow">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resources/images/understand.svg" alt="circle arrows">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg" alt="arrow">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+
+      <!-- Contact section -->
+
+      <h4>Designed in New York</h4>
+      <h2 id="work">Portfolio</h2>
+      <p>Coming Soon!</p>
+      <h2 id="team">Team</h2>
+      <p>We're hiring!</p>
+      <h2 id="contact">Contact</h2>
+      <p>Phone (555) 555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+
+      <!-- footer -->
+
+      <div class="footer">
+        <p>&copy; Broadway 2016
+        <a href="#home">Home</a>
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+        </p>
 </html>
